<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <CheckBox
            android:text="@string/advantage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/advantage"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.196" app:layout_constraintVertical_bias="0.771"/>
    <TextView
            android:layout_width="239dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.063"
            android:gravity="center" android:textSize="96sp" android:id="@+id/mainRoll"
    />
    <Button
            android:text="@string/roll"
            android:layout_width="172dp"
            android:layout_height="76dp" android:id="@+id/rollbtn"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.922"/>
    <CheckBox
            android:text="@string/disadvantage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/disadvantage"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.793" app:layout_constraintVertical_bias="0.771"/>
    <TextView
            android:layout_width="136dp"
            android:layout_height="93dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/second"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.336"
            android:gravity="center" android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>