<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <TextView
            android:text="@string/sum"
            android:layout_width="127dp"
            android:layout_height="35dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/sum" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintVertical_bias="0.323" android:textSize="24sp"/>
    <TextView
            android:layout_width="322dp"
            android:layout_height="99dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/sumView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.494" app:layout_constraintVertical_bias="0.436"
            android:textSize="60sp" android:gravity="center" android:background="@drawable/back"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/d4"
            android:hint="@string/number0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.045" app:layout_constraintVertical_bias="0.767"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/d12"
            android:hint="@string/number0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.948" app:layout_constraintVertical_bias="0.762"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/d10"
            android:hint="@string/number0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.715" app:layout_constraintVertical_bias="0.764"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/d8"
            android:hint="@string/number0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.766"/>

    <EditText
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/d6"
            android:hint="@string/number0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.27" app:layout_constraintVertical_bias="0.766"/>
    <Button
            android:text="@string/roll"
            android:layout_width="175dp"
            android:layout_height="70dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/rollbtn2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.949"/>
    <TextView
            android:layout_width="322dp"
            android:layout_height="99dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/rollsView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.494" app:layout_constraintVertical_bias="0.103"
            android:textSize="24sp" android:background="@drawable/back"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/d4"
            android:id="@+id/img_d4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintVertical_bias="0.633" tools:ignore="VectorDrawableCompat"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/d6"
            android:id="@+id/img_d6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintVertical_bias="0.635" tools:ignore="VectorDrawableCompat"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/d8"
            android:id="@+id/img_d8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.635" tools:ignore="VectorDrawableCompat"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/d10"
            android:id="@+id/img_d10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.715"
            app:layout_constraintVertical_bias="0.635" tools:ignore="VectorDrawableCompat"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/d12"
            android:id="@+id/img_d12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.948"
            app:layout_constraintVertical_bias="0.637" tools:ignore="VectorDrawableCompat"/>
    <TextView
            android:text="4"
            android:layout_width="23dp"
            android:layout_height="29dp" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/l4" android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.628" app:layout_constraintHorizontal_bias="0.09"/>
    <TextView
            android:text="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/l6" android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.628" app:layout_constraintHorizontal_bias="0.296"/>
    <TextView
            android:text="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/l8"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.626" android:gravity="center"/>
    <TextView
            android:text="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/l10" android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.626" app:layout_constraintHorizontal_bias="0.692"/>
    <TextView
            android:text="12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/l12"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.628" app:layout_constraintHorizontal_bias="0.911"/>
    <TextView
            android:text="@string/rolls"
            android:layout_width="127dp"
            android:layout_height="35dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/rolls" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintVertical_bias="0.028" android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>